[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwa-tools"
version = "1.1.2" # Reminder to update this version number as needed.
description = "Hydro conditioning tools for PWA workflows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[tool.setuptools]
packages = ["pwa_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "regression: end-to-end tests requiring real watershed data (skipped by default in dev)",
    "integration: tests that exercise external binaries (Raven, WhiteboxTools, gdal)",
]