[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwa-tools"
version = "1.1.4" # Reminder to update this version number as needed.
description = "Hydro conditioning tools for PWA workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "scipy>=1.11",
    "rasterio>=1.3",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "lxml>=4.9",
    "pyyaml>=6.0",
    "whitebox>=2.3.0",
]
# GDAL (osgeo) is required for merge_rasters but cannot be pip-installed.
# Install via conda:  conda install -c conda-forge gdal

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

# Auto-discover all pwa_tools.* subpackages (io, raven, etc.) so they
# end up in the wheel. The previous explicit ``packages = ["pwa_tools"]``
# silently excluded pwa_tools/io and pwa_tools/WBT — non-editable
# installs (e.g. from a built wheel) then crashed on
# ``from pwa_tools.runner import run_step0`` with ModuleNotFoundError
# because runner.py imports pwa_tools.io.*. Editable installs masked
# this because they walk the source tree directly.
[tool.setuptools.packages.find]
include = ["pwa_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "regression: end-to-end tests requiring real watershed data (skipped by default in dev)",
    "integration: tests that exercise external binaries (Raven, WhiteboxTools, gdal)",
    "slow: tests taking more than ~30 seconds (typically WBT or full-pipeline runs)",
]